test/error/error.input060.zc
Expression is not a struct/union on line 3
